[package]
name = "stm32f7-led-chaser"
authors = ["Matthieu Rousset <pro.mrousset@gmail.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"

[dependencies]

aes-gcm = {version = "0.10.3", default-features = false, features = ["aes", "heapless"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt"] } # missing integrated-timers
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.2.0", features = ["defmt", "exti", "memory-x", "stm32f722ze", "time-driver-any", "unstable-pac"] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embedded-hal = "0.2.6"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"
heapless = { version = "0.8", default-features = false }
hmac = "0.12.1"
nb = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand_core = "0.6.3"
sha2 = { version = "0.10.8", default-features = false }
static_cell = "2"

[profile.release]
debug = 2
